update issue 840 (FindBug)com.aimluck.eip.modules.parameters.RegistryEntryListBox.buildContext(RunData, String, String, Map, Context) は、効率が悪い Boolean コンストラクタを呼び出しています。その代わりに Boolean.valueOf(...) を使用して
git-svn-id: http://aipo.googlecode.com/svn/trunk@4397 b7d4e767-949e-c8c6-5735-6c11b8a2f74f